@@ -1,3 +1,9 @@
+2011-05-19  Tom Tromey  <tromey@redhat.com>
+
+	* python/py-inferior.c (python_inferior_exit): Use
+	target_gdbarch.
+	(python_on_resume): Likewise.
+
 2011-05-17  Ulrich Weigand  <ulrich.weigand@linaro.org>
 
 	* arm-tdep.c (arm_gdbarch_init): Enfore correct register number
